tests/netconvert/import/XML/errors/broken_edge/edge#length__empty1/errors.netconvert
Error: Attribute 'length' in definition of edge '1' is empty.
Quitting (on error).
